<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grzegorz.room.EditNotaActivity">

    <TextView
        android:id="@+id/edit_nota_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_nota"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        app:layout_constraintBottom_toTopOf="@id/edit_nota_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/edit_nota_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_nota_first_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nota_title"
        tools:text="Juan"
        android:importantForAutofill="no" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tag_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:chipSpacing="8dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_nota_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_nota_title"
        app:singleSelection="false"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/edit_nota_first_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_surname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_nota_second_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nota_name"
        tools:text="Agüí" />

    <EditText
        android:id="@+id/edit_nota_second_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/second_surname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/save_nota_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nota_first_surname"
        tools:text="Martín" />

    <Button
        android:id="@+id/save_nota_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nota_second_surname" />


</androidx.constraintlayout.widget.ConstraintLayout>